@@ -1,6 +1,7 @@
 v1.1 - Pending
 	+ Allow searching ALL metadata in library ("everything")
 	+ GNOME session support
+	+ Cover art preferences: save to ~/.covers or in file's respective dir
 	+ Add "shuffle" and "repeat" commandline arguments
 	+ Show if mpd is updating in statusbar
 	+ Save last used option in library search
